# phenocai

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  lonnstorp_dataset.csv  lonnstorp_dataset_with_full_paths.csv  lonnstorp_dataset_with_splits.csv  pyproject.toml
docs/: README.md  Untitled 1.md  Untitled.md  api_reference.md  cross_station_evaluation.md  implementation_plan.md  model_evaluation_findings.md  model_improvement_guide.md  quick_reference.md  training_guide.md  workflow_complete_guide.md  workflow_data_preparation.md  workflow_evaluation.md  workflow_overview.md  workflow_prediction.md  workflow_training.md
docs/.obsidian/: workspace.json
docs/api/: api_reference.md
docs/developer/: implementation_plan.md  project_status_summary.md
docs/workflows/: workflow_annotation_generation.md  workflow_complete_guide.md  workflow_evaluation.md
notebooks/: README.md  phenocai_pipeline.py
scripts/: 01_prepare_training.py  analyze_heuristics.py  analyze_prediction_thresholds.py  analyze_quality_issues.py  check_missing_files.py  create_geography_student_figures.py  create_report_figures.py  create_test_dataset.py  evaluate_all_methods.py  evaluate_balanced_model.py  evaluate_model.py  fix_dataset_paths.py  predict_historical_snow.py  predict_with_threshold.py  simple_model_comparison.py  switch_station.py  test_heuristics_simple.py  train_with_heuristics.py  visualize_method_comparison.py
src/phenocai/: __init__.py  __main__.py  roi_calculator.py  utils.py
src/phenocai/analysis/: __init__.py  heuristics.py
src/phenocai/cli/: __init__.py  analyze.py  (+1 more)
(+38 files in other folders)
